# yolo-for-autonomous-driving

./: .gitignore  README.md  convert_dataset_to_yolo_format.py  dataset_to_yolo_converter.py  fhs.nix  pyproject.toml  train_yolos.py
config/converter/: kitti.yaml  kitti_train_splitted.yaml
config/trainer/: yolov11_kitti.yaml  yolov11_kitti_train_splitted.yaml  yolov12_kitti_train_splitted.yaml
